--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/RunParam/RunParamPage6.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/RunParam/RunParamPage6.xaml
@@ -23,11 +23,11 @@
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
 
-                    <TextBlock
+                    <Button
                         Grid.Row="0"
                         Grid.Column="0"
-                        Style="{DynamicResource MainTextStyle2}"
-                        Text="{DynamicResource EngineSpeed}" />
+                        Content="{DynamicResource EngineSpeed}"
+                        Style="{DynamicResource MainTextButtonStyle6}" />
 
                     <common:EffectBorder
                         Grid.Row="0"
@@ -70,17 +70,7 @@
                             <RowDefinition Height="40" />
                             <RowDefinition />
                         </Grid.RowDefinitions>
-                        <Border
-                            Background="{DynamicResource ContentDeepSkyBlueBrush}"
-                            BorderBrush="DarkGray"
-                            BorderThickness="0,0,0,2">
-                            <TextBlock
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                FontSize="{DynamicResource Double20}"
-                                Foreground="White"
-                                Text="{DynamicResource CurrentCarParam}" />
-                        </Border>
+                        <Button Content="{DynamicResource CurrentCarParam}" Style="{DynamicResource MainTextButtonStyle5}" />
                         <Grid Grid.Row="1" Margin="5,5,5,5">
                             <Grid.RowDefinitions>
                                 <RowDefinition />
@@ -94,33 +84,41 @@
                                 <RowDefinition />
                             </Grid.RowDefinitions>
                             <Grid Grid.Row="0">
-                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource ColdFanSpped3}" />
-                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.CoolingFanSpeed1, StringFormat={}{0:F0}  r/min}" />
+                                <Button Content="{DynamicResource ColdFanSpped3}" Style="{DynamicResource RunParamButtonTextStyle1}" />
+                                <Button Content="{Binding Model.RunParamModel.CoolingFanSpeed1}" Style="{DynamicResource RunParamButtonTextStyle4}" />
+                                <Button Content="r/min" Style="{DynamicResource RunParamButtonTextStyle3}" />
+                                
                             </Grid>
                             <Grid Grid.Row="1">
-                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource ColdFanSpped4}" />
-                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.CoolingFanSpeed2, StringFormat={}{0:F0}  r/min}" />
+                                <Button Content="{DynamicResource ColdFanSpped4}" Style="{DynamicResource RunParamButtonTextStyle1}" />
+                                <Button Content="{Binding Model.RunParamModel.CoolingFanSpeed2}" Style="{DynamicResource RunParamButtonTextStyle4}" />
+                                <Button Content="r/min" Style="{DynamicResource RunParamButtonTextStyle3}" />
                             </Grid>
                             <Grid Grid.Row="2">
-                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource ExciterCurrent}" />
-                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.ExciterCurrent, StringFormat={}{0:F0}   A}" />
+                                <Button Content="{DynamicResource ExciterCurrent}" Style="{DynamicResource RunParamButtonTextStyle1}" />
+                                <Button Content="{Binding Model.RunParamModel.ExciterCurrent}" Style="{DynamicResource RunParamButtonTextStyle6}" />
+                                <Button Content="A" Style="{DynamicResource RunParamButtonTextStyle5}" />
                             </Grid>
                          
                             <Grid Grid.Row="4">
-                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource MainGeneratorExciterCurrent}" />
-                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.MainGeneratorExciterCurrent, StringFormat={}{0:F0}   A}" />
+                                <Button Content="{DynamicResource MainGeneratorExciterCurrent}" Style="{DynamicResource RunParamButtonTextStyle1}" />
+                                <Button Content="{Binding Model.RunParamModel.MainGeneratorExciterCurrent}" Style="{DynamicResource RunParamButtonTextStyle6}" />
+                                <Button Content="A" Style="{DynamicResource RunParamButtonTextStyle5}" />
                             </Grid>
                             <Grid Grid.Row="5">
-                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource EarthLeakageCurrent}" />
-                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.EarthLeakageCurrent, StringFormat={}{0:F0}mA}" />
+                                <Button Content="{DynamicResource EarthLeakageCurrent}" Style="{DynamicResource RunParamButtonTextStyle1}" />
+                                <Button Content="{Binding Model.RunParamModel.EarthLeakageCurrent}" Style="{DynamicResource RunParamButtonTextStyle7}" />
+                                <Button Content="mA" Style="{DynamicResource RunParamButtonTextStyle5}" />
                             </Grid>
                             <Grid Grid.Row="6">
-                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource FrontTurbochargerSpeed}" />
-                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.FrontTurbochargerSpeed, StringFormat={}{0:F0}  r/min}" />
+                                <Button Content="{DynamicResource FrontTurbochargerSpeed}" Style="{DynamicResource RunParamButtonTextStyle1}" />
+                                <Button Content="{Binding Model.RunParamModel.FrontTurbochargerSpeed}" Style="{DynamicResource RunParamButtonTextStyle4}" />
+                                <Button Content="r/min" Style="{DynamicResource RunParamButtonTextStyle3}" />
                             </Grid>
                             <Grid Grid.Row="7">
-                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource AfterTurbochargerSpeed}" />
-                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.AfterTurbochargerSpeed, StringFormat={}{0:F0}  r/min}" />
+                                <Button Content="{DynamicResource AfterTurbochargerSpeed}" Style="{DynamicResource RunParamButtonTextStyle1}" />
+                                <Button Content="{Binding Model.RunParamModel.AfterTurbochargerSpeed}" Style="{DynamicResource RunParamButtonTextStyle4}" />
+                                <Button Content="r/min" Style="{DynamicResource RunParamButtonTextStyle3}" />
                             </Grid>
                         </Grid>
                     </Grid>
@@ -136,18 +134,7 @@
                             <RowDefinition Height="40" />
                             <RowDefinition />
                         </Grid.RowDefinitions>
-                        <Border
-                            Background="{DynamicResource ContentDeepSkyBlueBrush}"
-                            BorderBrush="DarkGray"
-                            BorderThickness="0,0,0,2">
-                            <TextBlock
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                FontSize="{DynamicResource Double20}"
-                                Foreground="White"
-                                Text="{DynamicResource OtherCarRunParam}" />
-
-                        </Border>
+                        <Button Content="{DynamicResource OtherCarRunParam}" Style="{DynamicResource MainTextButtonStyle5}" />
                         <Grid Grid.Row="1" Margin="5,5,5,5">
                             <Grid.RowDefinitions>
                                 <RowDefinition />
@@ -161,33 +148,41 @@
                                 <RowDefinition />
                             </Grid.RowDefinitions>
                             <Grid Grid.Row="0">
-                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource ColdFanSpped3}" />
-                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.OtherCoolingFanSpeed1, StringFormat={}{0:F0}  r/min}" />
+                                <Button Content="{DynamicResource ColdFanSpped3}" Style="{DynamicResource RunParamButtonTextStyle1}" />
+                                <Button Content="{Binding Model.RunParamModel.OtherCoolingFanSpeed1}" Style="{DynamicResource RunParamButtonTextStyle4}" />
+                                <Button Content="r/min" Style="{DynamicResource RunParamButtonTextStyle3}" />
+
                             </Grid>
                             <Grid Grid.Row="1">
-                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource ColdFanSpped4}" />
-                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.OtherCoolingFanSpeed2, StringFormat={}{0:F0}  r/min}" />
+                                <Button Content="{DynamicResource ColdFanSpped4}" Style="{DynamicResource RunParamButtonTextStyle1}" />
+                                <Button Content="{Binding Model.RunParamModel.OtherCoolingFanSpeed2}" Style="{DynamicResource RunParamButtonTextStyle4}" />
+                                <Button Content="r/min" Style="{DynamicResource RunParamButtonTextStyle3}" />
                             </Grid>
                             <Grid Grid.Row="2">
-                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource ExciterCurrent}" />
-                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.OtherExciterCurrent, StringFormat={}{0:F0}   A}" />
+                                <Button Content="{DynamicResource ExciterCurrent}" Style="{DynamicResource RunParamButtonTextStyle1}" />
+                                <Button Content="{Binding Model.RunParamModel.OtherExciterCurrent}" Style="{DynamicResource RunParamButtonTextStyle6}" />
+                                <Button Content="A" Style="{DynamicResource RunParamButtonTextStyle5}" />
                             </Grid>
 
                             <Grid Grid.Row="4">
-                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource MainGeneratorExciterCurrent}" />
-                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.OtherMainGeneratorExciterCurrent, StringFormat={}{0:F0}   A}" />
+                                <Button Content="{DynamicResource MainGeneratorExciterCurrent}" Style="{DynamicResource RunParamButtonTextStyle1}" />
+                                <Button Content="{Binding Model.RunParamModel.OtherMainGeneratorExciterCurrent}" Style="{DynamicResource RunParamButtonTextStyle6}" />
+                                <Button Content="A" Style="{DynamicResource RunParamButtonTextStyle5}" />
                             </Grid>
                             <Grid Grid.Row="5">
-                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource EarthLeakageCurrent}" />
-                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.OtherEarthLeakageCurrent, StringFormat={}{0:F0}mA}" />
+                                <Button Content="{DynamicResource EarthLeakageCurrent}" Style="{DynamicResource RunParamButtonTextStyle1}" />
+                                <Button Content="{Binding Model.RunParamModel.OtherEarthLeakageCurrent}" Style="{DynamicResource RunParamButtonTextStyle7}" />
+                                <Button Content="mA" Style="{DynamicResource RunParamButtonTextStyle5}" />
                             </Grid>
                             <Grid Grid.Row="6">
-                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource FrontTurbochargerSpeed}" />
-                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.OtherFrontTurbochargerSpeed, StringFormat={}{0:F0}  r/min}" />
+                                <Button Content="{DynamicResource FrontTurbochargerSpeed}" Style="{DynamicResource RunParamButtonTextStyle1}" />
+                                <Button Content="{Binding Model.RunParamModel.OtherFrontTurbochargerSpeed}" Style="{DynamicResource RunParamButtonTextStyle4}" />
+                                <Button Content="r/min" Style="{DynamicResource RunParamButtonTextStyle3}" />
                             </Grid>
                             <Grid Grid.Row="7">
-                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource AfterTurbochargerSpeed}" />
-                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.OtherAfterTurbochargerSpeed, StringFormat={}{0:F0}  r/min}" />
+                                <Button Content="{DynamicResource AfterTurbochargerSpeed}" Style="{DynamicResource RunParamButtonTextStyle1}" />
+                                <Button Content="{Binding Model.RunParamModel.OtherAfterTurbochargerSpeed}" Style="{DynamicResource RunParamButtonTextStyle4}" />
+                                <Button Content="r/min" Style="{DynamicResource RunParamButtonTextStyle3}" />
                             </Grid>
                         </Grid>
                     </Grid>
